--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">MyKotlinApp</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="app_name">WikipediA Kotlin</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="search">Search</string>
 </resources>
